Enable virtual-threads